force-app/main/default/objects/obj800__c/obj800__c.object-meta.xml
<CustomObject>
    <label>obj800</label>
    <nameField>
        <label>obj800 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>obj800s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>