force-app/main/default/objects/obj800__c/fields/field3__c.field-meta.xml
<CustomField>
    <fullName>field3__c</fullName>
    <label>field3</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>