force-app/main/default/objects/obj800__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AutorabitExtId__c</columns>
    <columns>field1__c</columns>
    <columns>field2__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>